# kiri

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  SECURITY.md  index.html
kiri/: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml.example  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt
kiri/docker/: Dockerfile
kiri/docs/guides/: quickstart.md
kiri/packaging/: hook_disable_chromadb_telemetry.py  hook_torch_dll_path.py  kiri.spec
kiri/packaging/linux/: kiri.service
kiri/packaging/macos/: dev.kiri.plist
kiri/packaging/windows/: install.ps1
kiri/scripts/: install-hooks.sh  smoke_test.py
kiri/scripts/hooks/: pre-commit
kiri/src/: main.py
kiri/src/audit/: __init__.py  log.py
kiri/src/cli/: app.py  factory.py
kiri/src/config/: settings.py
kiri/src/filter/: l1_similarity.py  l2_symbols.py  l3_classifier.py  pipeline.py
kiri/src/indexer/: chunker.py  embedder.py  symbol_extractor.py  watcher.py
kiri/src/keys/: manager.py
kiri/src/llm/: __init__.py  backend.py  llama_cpp.py  ollama.py
kiri/src/proxy/: forwarder.py  server.py
kiri/src/ratelimit/: __init__.py  limiter.py
kiri/src/redaction/: engine.py  summary_generator.py
kiri/src/store/: atomic_write.py  secrets_store.py  summary_store.py  symbol_store.py  vector_store.py
kiri/test_project/: pricing.py
kiri/test_project/csharp/: PricingEngine.cs
kiri/test_project/go/: pricing.go
kiri/test_project/java/: PricingEngine.java
kiri/tests/integration/: test_gateway_http.py  test_gateway_openai.py
kiri/tests/security/: test_creditscorer_scenarios.py  test_path_traversal.py
kiri/tests/unit/: test_anthropic_protocol.py  test_audit_log.py  test_chunker.py  test_chunker_semantic.py  test_cli_add.py  test_cli_app.py  test_cli_inspect.py  test_cli_key.py  test_cli_remove.py  test_cli_status.py  test_embedder.py  test_forwarder.py  test_initial_index.py  test_inline_protection.py  test_install.py  test_key_manager.py  test_l1_similarity.py  test_l2_symbols.py  test_l3_classifier.py  test_llama_cpp_backend.py  test_main.py  (+14 more)
(+155 files in other folders)
