[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "kiri"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "pyyaml>=6.0,<7.0",
    "sentence-transformers>=2.7.0,<6.0.0",
    "chromadb>=0.4.24,<2.0.0",
    "watchdog>=4.0.0,<7.0.0",
    "typer>=0.12.0,<1.0.0",
    "tree-sitter>=0.25.0,<1.0.0",
    "tree-sitter-python>=0.25.0,<1.0.0",
    "tree-sitter-javascript>=0.25.0,<1.0.0",
    "tree-sitter-typescript>=0.23.0,<1.0.0",
    "tree-sitter-java>=0.23.0,<1.0.0",
    "tree-sitter-go>=0.25.0,<1.0.0",
    "tree-sitter-rust>=0.24.0,<1.0.0",
    "tree-sitter-c>=0.24.0,<1.0.0",
    "tree-sitter-cpp>=0.23.0,<1.0.0",
    "tree-sitter-c-sharp>=0.23.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.3",
    "types-PyYAML>=6.0",
]

[project.scripts]
kiri = "src.cli.app:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B", "C4", "PTH"]
ignore = [
    "S101",   # allow assert in tests
    "B008",   # typer.Option/Argument in function defaults is the intended Typer pattern
]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
# chromadb's Include type stubs differ across versions: on some builds the
# include=["distances", "metadatas"] call is typed as List[IncludeEnum] and
# plain strings trigger list-item errors; on others it accepts Literal strings
# and the ignore is unused.  Suppress warn_unused_ignores for this module only.
module = "src.store.vector_store"
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
